# pdfcmd

./: Makefile  README.md  pyproject.toml  setup.py
pdfcmd/: __main__.py  pdfcmd.py
pdfcmd/commands/: cat.py  help.py  info.py  pages.py
