[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfcmd"
description = "Utility to perform commands on PDF files"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["PDF", "pypdf"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "pypdf>=3.1.0",
]

[[project.authors]]
name = "Mark Blakeney"
email = "mark.blakeney@bullet-systems.net"

[project.urls]
Homepage = "https://github.com/bulletmark/pdfcmd"

[project.scripts]
pdfcmd = "pdfcmd.pdfcmd:main"

[project.license]
text = "GPLv3"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.mypy]
implicit_optional = true
no_strict_optional = true
warn_no_return = false
allow_untyped_globals = true
allow_redefinition = true
ignore_missing_imports = true

[tool.edit-lint]
linters = [
  "ruff",
  "flake8",
  "mypy",
]

# vim:se sw=2:
